--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Pokemon from "../components/Pokemon.jsx";
-import BaseLayout from "../layouts/baseLayout.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 /* const pokemon = await fetch("https://pokeapi.co/api/v2/pokemon/snorlax").then((res) => {
 	return res.json()
