--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,7 @@ const {name, sprites:{front_default}} = pokemon
 	<body>
 		<BaseLayout>
 			<h1>Astro</h1>
+			<h2>Machi</h2>
 			<Pokemon client:only/>
 		</BaseLayout>
 	</body>
